--- a/doc/iausofa.texi
+++ b/doc/iausofa.texi
@@ -4592,63 +4592,82 @@ Technical Note No. 32, BKG (2004).
 @end deftypefun
 
 @c ------------------------------------------------------------
-@c SONO ARRIVATO QUI!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 @deftypefun int iauEform (int @var{n}, double * @var{a}, double * @var{f})
 Earth reference ellipsoids.
 
-
 Status:  canonical.
 
 Given:
-   n    int         ellipsoid identifier (Note 1)
+
+@example
+n    int         ellipsoid identifier (Note 1)
+@end example
 
 Returned:
-   a    double      equatorial radius (meters, Note 2)
-   f    double      flattening (Note 2)
+
+@example
+a    double      equatorial radius (meters, Note 2)
+f    double      flattening (Note 2)
+@end example
 
 Returned (function value):
-        int         status:  0 = OK
-                            -1 = illegal identifier (Note 3)
+
+@example
+int         status:  0 = OK
+                    -1 = illegal identifier (Note 3)
+@end example
 
 Notes:
 
-1) The identifier n is a number that specifies the choice of
-   reference ellipsoid.  The following are supported:
+@enumerate
+@item
+The identifier @var{n} is a number that specifies the choice of
+reference ellipsoid.  The following are supported:
 
-      n    ellipsoid
+@example
+n    ellipsoid
 
-      1     WGS84
-      2     GRS80
-      3     WGS72
+1     WGS84
+2     GRS80
+3     WGS72
+@end example
 
-   The n value has no significance outside the SOFA software.  For
-   convenience, symbols WGS84 etc. are defined in sofam.h.
+The @var{n} value has no significance outside the @sofa{} software.  For
+convenience, symbols WGS84 etc. are defined in @file{sofam.h}.
 
-2) The ellipsoid parameters are returned in the form of equatorial
-   radius in meters (a) and flattening (f).  The latter is a number
-   around 0.00335, i.e. around 1/298.
+@item
+The ellipsoid parameters are returned in the form of equatorial radius
+in meters (a) and flattening (f).  The latter is a number around
+@math{0.00335}, i.e. around @math{1/298}.
 
-3) For the case where an unsupported n value is supplied, zero a and
-   f are returned, as well as error status.
+@item
+For the case where an unsupported @var{n} value is supplied, zero
+@var{a} and @var{f} are returned, as well as error status.
+@end enumerate
 
 References:
 
-   Department of Defense World Geodetic System 1984, National
-   Imagery and Mapping Agency Technical Report 8350.2, Third
-   Edition, p3-2.
+@itemize
+@item
+Department of Defense World Geodetic System 1984, National Imagery and
+Mapping Agency Technical Report 8350.2, Third Edition, p3-2.
 
-   Moritz, H., Bull. Geodesique 66-2, 187 (1992).
+@item
+Moritz, H., Bull. Geodesique 66-2, 187 (1992).
 
-   The Department of Defense World Geodetic System 1972, World
-   Geodetic System Committee, May 1974.
+@item
+The Department of Defense World Geodetic System 1972, World Geodetic
+System Committee, May 1974.
 
-   Explanatory Supplement to the Astronomical Almanac,
-   P. Kenneth Seidelmann (ed), University Science Books (1992),
-   p220.
+@item
+Explanatory Supplement to the Astronomical Almanac, P. Kenneth
+Seidelmann (ed), University Science Books (1992), p220.
+@end itemize
 @end deftypefun
 
 @c ------------------------------------------------------------
+@c SONO ARRIVATO QUI!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 @deftypefun double iauEo06a (double @vari{date}, double @varii{date})
 Equation of the origins, IAU 2006 precession and IAU 2000A nutation.
@@ -5785,17 +5804,20 @@ Returned (function value):
 
 Notes:
 
-1) The identifier n is a number that specifies the choice of
-   reference ellipsoid.  The following are supported:
+@item
+The identifier @var{n} is a number that specifies the choice of
+reference ellipsoid.  The following are supported:
 
-      n    ellipsoid
+@example
+n    ellipsoid
 
-      1     WGS84
-      2     GRS80
-      3     WGS72
+1     WGS84
+2     GRS80
+3     WGS72
+@end example
 
-   The n value has no significance outside the SOFA software.  For
-   convenience, symbols WGS84 etc. are defined in sofam.h.
+The @var{n} value has no significance outside the @sofa{} software.  For
+convenience, symbols WGS84 etc. are defined in @file{sofam.h}.
 
 2) The geocentric vector (xyz, given) and height (height, returned)
    are in meters.
@@ -5892,17 +5914,20 @@ Returned (function value):
 
 Notes:
 
-1) The identifier n is a number that specifies the choice of
-   reference ellipsoid.  The following are supported:
+@item
+The identifier @var{n} is a number that specifies the choice of
+reference ellipsoid.  The following are supported:
 
-      n    ellipsoid
+@example
+n    ellipsoid
 
-      1     WGS84
-      2     GRS80
-      3     WGS72
+1     WGS84
+2     GRS80
+3     WGS72
+@end example
 
-   The n value has no significance outside the SOFA software.  For
-   convenience, symbols WGS84 etc. are defined in sofam.h.
+The @var{n} value has no significance outside the @sofa{} software.  For
+convenience, symbols WGS84 etc. are defined in @file{sofam.h}.
 
 2) The height (height, given) and the geocentric vector (xyz,
    returned) are in meters.
